--- a/app/assets/stylesheets/uriji-icons.css.erb
+++ b/app/assets/stylesheets/uriji-icons.css.erb
@@ -165,3 +165,12 @@
 .uj-send:before {
   content: "\e930";
 }
+.uj-bookmark-alt:before {
+  content: "\e90a";
+}
+.uj-donation-alt:before {
+  content: "\e90b";
+}
+.uj-lock-open:before {
+  content: "\e90c";
+}
