--- a/app/assets/stylesheets/uriji-icons.css.erb
+++ b/app/assets/stylesheets/uriji-icons.css.erb
@@ -6,11 +6,11 @@
 //= depend_on_asset "uriji-icons.svg"
 @font-face {
   font-family: 'UrijiIcons';
-  src:  url('fonts/uriji-icons.eot?lcbnul');
-  src:  url('<%= font_path("uriji-icons.eot") %>?lcbnul#iefix') format('embedded-opentype'),
-    url('<%= font_path("uriji-icons.ttf") %>?lcbnul') format('truetype'),
-    url('<%= font_path("uriji-icons.woff") %>?lcbnul') format('woff'),
-    url('<%= font_path("uriji-icons.svg") %>?lcbnul#uriji-icons') format('svg');
+  src:  url('<%= font_path("uriji-icons.eot") %>?42hk3b');
+  src:  url('<%= font_path("uriji-icons.eot") %>?42hk3b#iefix') format('embedded-opentype'),
+    url('<%= font_path("uriji-icons.ttf") %>?42hk3b') format('truetype'),
+    url('<%= font_path("uriji-icons.woff") %>?42hk3b') format('woff'),
+    url('<%= font_path("uriji-icons.svg") %>?42hk3b#uriji-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -30,147 +30,517 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.uj-best-sellers:before {
+.uj-align-center:before {
   content: "\e900";
+  color: #4f4f4f;
 }
-.uj-by-price:before {
+.uj-align-left:before {
   content: "\e901";
+  color: #4f4f4f;
 }
-.uj-completed:before {
+.uj-align-right:before {
   content: "\e902";
+  color: #4f4f4f;
 }
-.uj-most-donated:before {
+.uj-angle-down:before {
   content: "\e903";
+  color: #4f4f4f;
 }
-.uj-rating:before {
+.uj-angle-left:before {
   content: "\e904";
+  color: #4f4f4f;
 }
-.uj-top-users:before {
+.uj-angle-right:before {
   content: "\e905";
+  color: #4f4f4f;
+}
+.uj-angle-up:before {
+  content: "\e906";
+  color: #4f4f4f;
+}
+.uj-arrow-down:before {
+  content: "\e907";
+  color: #4f4f4f;
+}
+.uj-arrow-left:before {
+  content: "\e908";
+  color: #4f4f4f;
+}
+.uj-arrow-right:before {
+  content: "\e909";
+  color: #4f4f4f;
+}
+.uj-arrow-up:before {
+  content: "\e90a";
+  color: #4f4f4f;
+}
+.uj-ban:before {
+  content: "\e90b";
+  color: #4f4f4f;
+}
+.uj-bell:before {
+  content: "\e90c";
+  color: #4f4f4f;
+}
+.uj-birthday-cake:before {
+  content: "\e90d";
+  color: #4f4f4f;
 }
 .uj-bookmark:before {
-  content: "\e906";
-}
-.uj-lastet:before {
-  content: "\e907";
-}
-.uj-location:before {
-  content: "\e908";
-}
-.uj-messages:before {
-  content: "\e909";
-}
-.uj-metrics:before {
   content: "\e90e";
+  color: #4f4f4f;
 }
-.uj-notifications:before {
+.uj-bookmark-o:before {
   content: "\e90f";
+  color: #4f4f4f;
 }
-.uj-profile:before {
+.uj-broom:before {
   content: "\e910";
+  color: #4f4f4f;
 }
-.uj-search:before {
+.uj-bug:before {
   content: "\e911";
-}
-.uj-settings:before {
-  content: "\e912";
-}
-.uj-top:before {
-  content: "\e913";
-}
-.uj-dream:before {
-  content: "\e914";
-}
-.uj-milestone:before {
-  content: "\e915";
-}
-.uj-story:before {
-  content: "\e916";
-}
-.uj-buyers:before {
-  content: "\e917";
+  color: #4f4f4f;
 }
 .uj-camera:before {
+  content: "\e912";
+  color: #4f4f4f;
+}
+.uj-caret-down:before {
+  content: "\e913";
+  color: #4f4f4f;
+}
+.uj-caret-left:before {
+  content: "\e914";
+  color: #4f4f4f;
+}
+.uj-caret-right:before {
+  content: "\e915";
+  color: #4f4f4f;
+}
+.uj-caret-up:before {
+  content: "\e916";
+  color: #4f4f4f;
+}
+.uj-chart:before {
+  content: "\e917";
+  color: #4f4f4f;
+}
+.uj-check:before {
   content: "\e918";
+  color: #4f4f4f;
 }
-.uj-content:before {
+.uj-chevron-circle-down:before {
   content: "\e919";
+  color: #4f4f4f;
 }
-.uj-description:before {
+.uj-chevron-circle-left:before {
   content: "\e91a";
+  color: #4f4f4f;
 }
-.uj-donation:before {
+.uj-chevron-circle-right:before {
   content: "\e91b";
+  color: #4f4f4f;
 }
-.uj-media:before {
+.uj-chevron-circle-up:before {
   content: "\e91c";
+  color: #4f4f4f;
 }
-.uj-uriji-points:before {
+.uj-chevron-down:before {
   content: "\e91d";
+  color: #4f4f4f;
 }
-.uj-verified:before {
+.uj-chevron-left:before {
   content: "\e91e";
+  color: #4f4f4f;
 }
-.uj-audio:before {
+.uj-chevron-right:before {
   content: "\e91f";
+  color: #4f4f4f;
 }
-.uj-chat:before {
+.uj-chevron-up:before {
   content: "\e920";
+  color: #4f4f4f;
+}
+.uj-cog:before {
+  content: "\e921";
+  color: #4f4f4f;
+}
+.uj-coin-head:before {
+  content: "\e922";
+  color: #4f4f4f;
+}
+.uj-coin-tail:before {
+  content: "\e923";
+  color: #4f4f4f;
+}
+.uj-comments-dots:before {
+  content: "\e924";
+  color: #4f4f4f;
+}
+.uj-copy:before {
+  content: "\e925";
+  color: #4f4f4f;
+}
+.uj-credit-card:before {
+  content: "\e926";
+  color: #4f4f4f;
+}
+.uj-credit-card-alt:before {
+  content: "\e927";
+  color: #4f4f4f;
+}
+.uj-crop:before {
+  content: "\e928";
+  color: #4f4f4f;
+}
+.uj-dream:before {
+  content: "\e929";
+  color: #4f4f4f;
+}
+.uj-dream-completed:before {
+  content: "\e92a";
+  color: #4f4f4f;
+}
+.uj-edit:before {
+  content: "\e92b";
+  color: #4f4f4f;
+}
+.uj-envelope:before {
+  content: "\e92c";
+  color: #4f4f4f;
+}
+.uj-envelope-alt:before {
+  content: "\e92d";
+  color: #4f4f4f;
+}
+.uj-eye:before {
+  content: "\e92e";
+  color: #4f4f4f;
+}
+.uj-eye-slash:before {
+  content: "\e92f";
+  color: #4f4f4f;
 }
 .uj-file:before {
-  content: "\e921";
+  content: "\e930";
+  color: #4f4f4f;
+}
+.uj-film:before {
+  content: "\e931";
+  color: #4f4f4f;
+}
+.uj-forward:before {
+  content: "\e932";
+  color: #4f4f4f;
+}
+.uj-gift:before {
+  content: "\e933";
+  color: #4f4f4f;
+}
+.uj-globe:before {
+  content: "\e934";
+  color: #4f4f4f;
+}
+.uj-heart:before {
+  content: "\e935";
+  color: #4f4f4f;
+}
+.uj-heart-o:before {
+  content: "\e936";
+  color: #4f4f4f;
 }
 .uj-image:before {
-  content: "\e922";
+  content: "\e937";
+  color: #4f4f4f;
 }
-.uj-video:before {
-  content: "\e923";
+.uj-key:before {
+  content: "\e938";
+  color: #4f4f4f;
 }
-.uj-videochat:before {
-  content: "\e924";
+.uj-language:before {
+  content: "\e939";
+  color: #4f4f4f;
 }
-.uj-youtube:before {
-  content: "\e925";
-}
-.uj-bars:before {
-  content: "\e926";
-}
-.uj-create:before {
-  content: "\e927";
-}
-.uj-delete:before {
-  content: "\e928";
-}
-.uj-edit-profile:before {
-  content: "\e929";
-}
-.uj-entry-wallet:before {
-  content: "\e92a";
-}
-.uj-exit-wallet:before {
-  content: "\e92b";
-}
-.uj-follow:before {
-  content: "\e92c";
-}
-.uj-following:before {
-  content: "\e92d";
-}
-.uj-like-o:before {
-  content: "\e92e";
-}
-.uj-like:before {
-  content: "\e92f";
-}
-.uj-send:before {
-  content: "\e930";
-}
-.uj-bookmark-alt:before {
-  content: "\e90a";
-}
-.uj-donation-alt:before {
-  content: "\e90b";
+.uj-lock:before {
+  content: "\e93a";
+  color: #4f4f4f;
 }
 .uj-lock-open:before {
-  content: "\e90c";
+  content: "\e93b";
+  color: #4f4f4f;
+}
+.uj-login:before {
+  content: "\e93c";
+  color: #4f4f4f;
+}
+.uj-login-alt:before {
+  content: "\e93d";
+  color: #4f4f4f;
+}
+.uj-logout:before {
+  content: "\e93e";
+  color: #4f4f4f;
+}
+.uj-logout-alt:before {
+  content: "\e93f";
+  color: #4f4f4f;
+}
+.uj-music-square:before {
+  content: "\e940";
+  color: #4f4f4f;
+}
+.uj-pencil:before {
+  content: "\e941";
+  color: #4f4f4f;
+}
+.uj-people:before {
+  content: "\e942";
+  color: #4f4f4f;
+}
+.uj-play:before {
+  content: "\e943";
+  color: #4f4f4f;
+}
+.uj-plus-circle:before {
+  content: "\e944";
+  color: #4f4f4f;
+}
+.uj-redo:before {
+  content: "\e945";
+  color: #4f4f4f;
+}
+.uj-rewind:before {
+  content: "\e946";
+  color: #4f4f4f;
+}
+.uj-rocket:before {
+  content: "\e947";
+  color: #4f4f4f;
+}
+.uj-sand-clock:before {
+  content: "\e948";
+  color: #4f4f4f;
+}
+.uj-search:before {
+  content: "\e949";
+  color: #4f4f4f;
+}
+.uj-shopping-cart:before {
+  content: "\e94a";
+  color: #4f4f4f;
+}
+.uj-sliders:before {
+  content: "\e94b";
+  color: #4f4f4f;
+}
+.uj-star:before {
+  content: "\e94c";
+  color: #4f4f4f;
+}
+.uj-star-o:before {
+  content: "\e94d";
+  color: #4f4f4f;
+}
+.uj-story:before {
+  content: "\e94e";
+  color: #4f4f4f;
+}
+.uj-terms:before {
+  content: "\e94f";
+  color: #4f4f4f;
+}
+.uj-times:before {
+  content: "\e950";
+  color: #4f4f4f;
+}
+.uj-times-circle:before {
+  content: "\e951";
+  color: #4f4f4f;
+}
+.uj-trash:before {
+  content: "\e952";
+  color: #4f4f4f;
+}
+.uj-trophy:before {
+  content: "\e953";
+  color: #4f4f4f;
+}
+.uj-user:before {
+  content: "\e954";
+  color: #4f4f4f;
+}
+.uj-user-plus:before {
+  content: "\e955";
+  color: #4f4f4f;
+}
+.uj-youtube-video:before {
+  content: "\e956";
+  color: #4f4f4f;
+}
+.uj-rocket-color .path1:before {
+  content: "\e957";
+  color: rgb(151, 151, 151);
+}
+.uj-rocket-color .path2:before {
+  content: "\e958";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
+}
+.uj-rocket-color .path3:before {
+  content: "\e959";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
+}
+.uj-rocket-color .path4:before {
+  content: "\e95a";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
+}
+.uj-rocket-color .path5:before {
+  content: "\e95b";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
+}
+.uj-rocket-color .path6:before {
+  content: "\e95c";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
+}
+.uj-rocket-color .path7:before {
+  content: "\e95d";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
+}
+.uj-rocket-color .path8:before {
+  content: "\e95e";
+  margin-left: -1em;
+  color: rgb(247, 246, 245);
+}
+.uj-rocket-color .path9:before {
+  content: "\e95f";
+  margin-left: -1em;
+  color: rgb(10, 146, 205);
+}
+.uj-rocket-color .path10:before {
+  content: "\e960";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
+}
+.uj-comments-dots-color .path1:before {
+  content: "\e961";
+  color: rgb(233, 252, 255);
+}
+.uj-comments-dots-color .path2:before {
+  content: "\e962";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
+}
+.uj-comments-dots-color .path3:before {
+  content: "\e963";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
+}
+.uj-comments-dots-color .path4:before {
+  content: "\e964";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
+}
+.uj-comments-dots-color .path5:before {
+  content: "\e965";
+  margin-left: -1em;
+  color: rgb(8, 146, 205);
+}
+.uj-comments-dots-color .path6:before {
+  content: "\e966";
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
+}
+.uj-comments-dots-color .path7:before {
+  content: "\e967";
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
+}
+.uj-comments-dots-color .path8:before {
+  content: "\e968";
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
+}
+.uj-credit-card-color .path1:before {
+  content: "\e969";
+  color: rgb(242, 201, 76);
+}
+.uj-credit-card-color .path2:before {
+  content: "\e96a";
+  margin-left: -1.3916015625em;
+  color: rgb(175, 145, 62);
+}
+.uj-credit-card-color .path3:before {
+  content: "\e96b";
+  margin-left: -1.3916015625em;
+  color: rgb(175, 145, 62);
+}
+.uj-credit-card-color .path4:before {
+  content: "\e96c";
+  margin-left: -1.3916015625em;
+  color: rgb(244, 244, 244);
+}
+.uj-credit-card-color .path5:before {
+  content: "\e96d";
+  margin-left: -1.3916015625em;
+  color: rgb(244, 244, 244);
+}
+.uj-credit-card-color .path6:before {
+  content: "\e96e";
+  margin-left: -1.3916015625em;
+  color: rgb(79, 79, 79);
+}
+.uj-bell-color .path1:before {
+  content: "\e96f";
+  color: rgb(242, 201, 76);
+}
+.uj-bell-color .path2:before {
+  content: "\e970";
+  margin-left: -1em;
+  color: rgb(242, 201, 76);
+}
+.uj-bell-color .path3:before {
+  content: "\e971";
+  margin-left: -1em;
+  color: rgb(242, 201, 76);
+}
+.uj-bell-color .path4:before {
+  content: "\e972";
+  margin-left: -1em;
+  color: rgb(242, 201, 76);
+}
+.uj-bell-color .path5:before {
+  content: "\e973";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
+}
+.uj-bell-color .path6:before {
+  content: "\e974";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
+}
+.uj-bell-color .path7:before {
+  content: "\e975";
+  margin-left: -1em;
+  color: rgb(255, 253, 248);
+}
+.uj-bell-color .path8:before {
+  content: "\e976";
+  margin-left: -1em;
+  color: rgb(175, 145, 62);
+}
+.uj-bell-color .path9:before {
+  content: "\e977";
+  margin-left: -1em;
+  color: rgb(175, 145, 62);
+}
+.uj-bell-color .path10:before {
+  content: "\e978";
+  margin-left: -1em;
+  color: rgb(255, 253, 248);
 }
