--- a/app/assets/stylesheets/uriji-icons.css.erb
+++ b/app/assets/stylesheets/uriji-icons.css.erb
@@ -6,13 +6,14 @@
 //= depend_on_asset "uriji-icons.svg"
 @font-face {
   font-family: 'UrijiIcons';
-  src:  url('<%= font_path("uriji-icons.eot") %>?42hk3b');
-  src:  url('<%= font_path("uriji-icons.eot") %>?42hk3b#iefix') format('embedded-opentype'),
-    url('<%= font_path("uriji-icons.ttf") %>?42hk3b') format('truetype'),
-    url('<%= font_path("uriji-icons.woff") %>?42hk3b') format('woff'),
-    url('<%= font_path("uriji-icons.svg") %>?42hk3b#uriji-icons') format('svg');
+  src:  url('<%= font_path("uriji-icons.eot") %>?nxnmyk');
+  src:  url('<%= font_path("uriji-icons.eot") %>?nxnmyk#iefix') format('embedded-opentype'),
+    url('<%= font_path("uriji-icons.ttf") %>?nxnmyk') format('truetype'),
+    url('<%= font_path("uriji-icons.woff") %>?nxnmyk') format('woff'),
+    url('<%= font_path("uriji-icons.svg") %>?nxnmyk#uriji-icons') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
 
 [class^="uj-"], [class*=" uj-"] {
@@ -206,12 +207,24 @@
   content: "\e92b";
   color: #4f4f4f;
 }
+.uj-ellipsis-v:before {
+  content: "\e979";
+  color: #4f4f4f;
+}
 .uj-envelope:before {
   content: "\e92c";
   color: #4f4f4f;
 }
 .uj-envelope-alt:before {
   content: "\e92d";
+  color: #4f4f4f;
+}
+.uj-exclamation-circle:before {
+  content: "\e97a";
+  color: #4f4f4f;
+}
+.uj-external-link:before {
+  content: "\e980";
   color: #4f4f4f;
 }
 .uj-eye:before {
@@ -290,6 +303,10 @@
   content: "\e940";
   color: #4f4f4f;
 }
+.uj-paper-plane:before {
+  content: "\e97b";
+  color: #4f4f4f;
+}
 .uj-pencil:before {
   content: "\e941";
   color: #4f4f4f;
@@ -302,8 +319,16 @@
   content: "\e943";
   color: #4f4f4f;
 }
+.uj-plus:before {
+  content: "\e97c";
+  color: #4f4f4f;
+}
 .uj-plus-circle:before {
   content: "\e944";
+  color: #4f4f4f;
+}
+.uj-question-circle:before {
+  content: "\e97d";
   color: #4f4f4f;
 }
 .uj-redo:before {
@@ -346,6 +371,10 @@
   content: "\e94e";
   color: #4f4f4f;
 }
+.uj-table-tennis:before {
+  content: "\e97e";
+  color: #4f4f4f;
+}
 .uj-terms:before {
   content: "\e94f";
   color: #4f4f4f;
@@ -370,6 +399,10 @@
   content: "\e954";
   color: #4f4f4f;
 }
+.uj-user-check:before {
+  content: "\e97f";
+  color: #4f4f4f;
+}
 .uj-user-plus:before {
   content: "\e955";
   color: #4f4f4f;
@@ -378,54 +411,54 @@
   content: "\e956";
   color: #4f4f4f;
 }
-.uj-rocket-color .path1:before {
-  content: "\e957";
-  color: rgb(151, 151, 151);
+.uj-bell-color .path1:before {
+  content: "\e96f";
+  color: rgb(242, 201, 76);
 }
-.uj-rocket-color .path2:before {
-  content: "\e958";
+.uj-bell-color .path2:before {
+  content: "\e970";
+  margin-left: -1em;
+  color: rgb(242, 201, 76);
+}
+.uj-bell-color .path3:before {
+  content: "\e971";
+  margin-left: -1em;
+  color: rgb(242, 201, 76);
+}
+.uj-bell-color .path4:before {
+  content: "\e972";
+  margin-left: -1em;
+  color: rgb(242, 201, 76);
+}
+.uj-bell-color .path5:before {
+  content: "\e973";
   margin-left: -1em;
   color: rgb(79, 79, 79);
 }
-.uj-rocket-color .path3:before {
-  content: "\e959";
+.uj-bell-color .path6:before {
+  content: "\e974";
   margin-left: -1em;
   color: rgb(79, 79, 79);
 }
-.uj-rocket-color .path4:before {
-  content: "\e95a";
+.uj-bell-color .path7:before {
+  content: "\e975";
   margin-left: -1em;
-  color: rgb(79, 79, 79);
+  color: rgb(255, 253, 248);
 }
-.uj-rocket-color .path5:before {
-  content: "\e95b";
+.uj-bell-color .path8:before {
+  content: "\e976";
   margin-left: -1em;
-  color: rgb(79, 79, 79);
+  color: rgb(175, 145, 62);
 }
-.uj-rocket-color .path6:before {
-  content: "\e95c";
+.uj-bell-color .path9:before {
+  content: "\e977";
   margin-left: -1em;
-  color: rgb(79, 79, 79);
+  color: rgb(175, 145, 62);
 }
-.uj-rocket-color .path7:before {
-  content: "\e95d";
+.uj-bell-color .path10:before {
+  content: "\e978";
   margin-left: -1em;
-  color: rgb(79, 79, 79);
-}
-.uj-rocket-color .path8:before {
-  content: "\e95e";
-  margin-left: -1em;
-  color: rgb(247, 246, 245);
-}
-.uj-rocket-color .path9:before {
-  content: "\e95f";
-  margin-left: -1em;
-  color: rgb(10, 146, 205);
-}
-.uj-rocket-color .path10:before {
-  content: "\e960";
-  margin-left: -1em;
-  color: rgb(79, 79, 79);
+  color: rgb(255, 253, 248);
 }
 .uj-comments-dots-color .path1:before {
   content: "\e961";
@@ -495,52 +528,52 @@
   margin-left: -1.3916015625em;
   color: rgb(79, 79, 79);
 }
-.uj-bell-color .path1:before {
-  content: "\e96f";
-  color: rgb(242, 201, 76);
+.uj-rocket-color .path1:before {
+  content: "\e957";
+  color: rgb(151, 151, 151);
 }
-.uj-bell-color .path2:before {
-  content: "\e970";
-  margin-left: -1em;
-  color: rgb(242, 201, 76);
-}
-.uj-bell-color .path3:before {
-  content: "\e971";
-  margin-left: -1em;
-  color: rgb(242, 201, 76);
-}
-.uj-bell-color .path4:before {
-  content: "\e972";
-  margin-left: -1em;
-  color: rgb(242, 201, 76);
-}
-.uj-bell-color .path5:before {
-  content: "\e973";
+.uj-rocket-color .path2:before {
+  content: "\e958";
   margin-left: -1em;
   color: rgb(79, 79, 79);
 }
-.uj-bell-color .path6:before {
-  content: "\e974";
+.uj-rocket-color .path3:before {
+  content: "\e959";
   margin-left: -1em;
   color: rgb(79, 79, 79);
 }
-.uj-bell-color .path7:before {
-  content: "\e975";
+.uj-rocket-color .path4:before {
+  content: "\e95a";
   margin-left: -1em;
-  color: rgb(255, 253, 248);
+  color: rgb(79, 79, 79);
 }
-.uj-bell-color .path8:before {
-  content: "\e976";
+.uj-rocket-color .path5:before {
+  content: "\e95b";
   margin-left: -1em;
-  color: rgb(175, 145, 62);
+  color: rgb(79, 79, 79);
 }
-.uj-bell-color .path9:before {
-  content: "\e977";
+.uj-rocket-color .path6:before {
+  content: "\e95c";
   margin-left: -1em;
-  color: rgb(175, 145, 62);
+  color: rgb(79, 79, 79);
 }
-.uj-bell-color .path10:before {
-  content: "\e978";
+.uj-rocket-color .path7:before {
+  content: "\e95d";
   margin-left: -1em;
-  color: rgb(255, 253, 248);
+  color: rgb(79, 79, 79);
+}
+.uj-rocket-color .path8:before {
+  content: "\e95e";
+  margin-left: -1em;
+  color: rgb(247, 246, 245);
+}
+.uj-rocket-color .path9:before {
+  content: "\e95f";
+  margin-left: -1em;
+  color: rgb(10, 146, 205);
+}
+.uj-rocket-color .path10:before {
+  content: "\e960";
+  margin-left: -1em;
+  color: rgb(79, 79, 79);
 }
