--- a/app/assets/stylesheets/uriji-icons.css.erb
+++ b/app/assets/stylesheets/uriji-icons.css.erb
@@ -6,11 +6,11 @@
 //= depend_on_asset "uriji-icons.svg"
 @font-face {
   font-family: 'UrijiIcons';
-  src:  url('<%= font_path("uriji-icons.eot") %>?nxnmyk');
-  src:  url('<%= font_path("uriji-icons.eot") %>?nxnmyk#iefix') format('embedded-opentype'),
-    url('<%= font_path("uriji-icons.ttf") %>?nxnmyk') format('truetype'),
-    url('<%= font_path("uriji-icons.woff") %>?nxnmyk') format('woff'),
-    url('<%= font_path("uriji-icons.svg") %>?nxnmyk#uriji-icons') format('svg');
+  src:  url('<%= font_path("uriji-icons.eot") %>?9z8zd1');
+  src:  url('<%= font_path("uriji-icons.eot") %>?9z8zd1#iefix') format('embedded-opentype'),
+    url('<%= font_path("uriji-icons.ttf") %>?9z8zd1') format('truetype'),
+    url('<%= font_path("uriji-icons.woff") %>?9z8zd1') format('woff'),
+    url('<%= font_path("uriji-icons.svg") %>?9z8zd1#uriji-icons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -33,383 +33,288 @@
 
 .uj-align-center:before {
   content: "\e900";
-  color: #4f4f4f;
 }
 .uj-align-left:before {
   content: "\e901";
-  color: #4f4f4f;
 }
 .uj-align-right:before {
   content: "\e902";
-  color: #4f4f4f;
 }
 .uj-angle-down:before {
   content: "\e903";
-  color: #4f4f4f;
 }
 .uj-angle-left:before {
   content: "\e904";
-  color: #4f4f4f;
 }
 .uj-angle-right:before {
   content: "\e905";
-  color: #4f4f4f;
 }
 .uj-angle-up:before {
   content: "\e906";
-  color: #4f4f4f;
 }
 .uj-arrow-down:before {
   content: "\e907";
-  color: #4f4f4f;
 }
 .uj-arrow-left:before {
   content: "\e908";
-  color: #4f4f4f;
 }
 .uj-arrow-right:before {
   content: "\e909";
-  color: #4f4f4f;
 }
 .uj-arrow-up:before {
   content: "\e90a";
-  color: #4f4f4f;
 }
 .uj-ban:before {
   content: "\e90b";
-  color: #4f4f4f;
 }
 .uj-bell:before {
   content: "\e90c";
-  color: #4f4f4f;
 }
 .uj-birthday-cake:before {
   content: "\e90d";
-  color: #4f4f4f;
 }
 .uj-bookmark:before {
   content: "\e90e";
-  color: #4f4f4f;
 }
 .uj-bookmark-o:before {
   content: "\e90f";
-  color: #4f4f4f;
 }
 .uj-broom:before {
   content: "\e910";
-  color: #4f4f4f;
 }
 .uj-bug:before {
   content: "\e911";
-  color: #4f4f4f;
 }
 .uj-camera:before {
   content: "\e912";
-  color: #4f4f4f;
 }
 .uj-caret-down:before {
   content: "\e913";
-  color: #4f4f4f;
 }
 .uj-caret-left:before {
   content: "\e914";
-  color: #4f4f4f;
 }
 .uj-caret-right:before {
   content: "\e915";
-  color: #4f4f4f;
 }
 .uj-caret-up:before {
   content: "\e916";
-  color: #4f4f4f;
 }
 .uj-chart:before {
   content: "\e917";
-  color: #4f4f4f;
 }
 .uj-check:before {
   content: "\e918";
-  color: #4f4f4f;
 }
 .uj-chevron-circle-down:before {
   content: "\e919";
-  color: #4f4f4f;
 }
 .uj-chevron-circle-left:before {
   content: "\e91a";
-  color: #4f4f4f;
 }
 .uj-chevron-circle-right:before {
   content: "\e91b";
-  color: #4f4f4f;
 }
 .uj-chevron-circle-up:before {
   content: "\e91c";
-  color: #4f4f4f;
 }
 .uj-chevron-down:before {
   content: "\e91d";
-  color: #4f4f4f;
 }
 .uj-chevron-left:before {
   content: "\e91e";
-  color: #4f4f4f;
 }
 .uj-chevron-right:before {
   content: "\e91f";
-  color: #4f4f4f;
 }
 .uj-chevron-up:before {
   content: "\e920";
-  color: #4f4f4f;
 }
 .uj-cog:before {
   content: "\e921";
-  color: #4f4f4f;
 }
 .uj-coin-head:before {
   content: "\e922";
-  color: #4f4f4f;
 }
 .uj-coin-tail:before {
   content: "\e923";
-  color: #4f4f4f;
 }
 .uj-comments-dots:before {
   content: "\e924";
-  color: #4f4f4f;
 }
 .uj-copy:before {
   content: "\e925";
-  color: #4f4f4f;
 }
 .uj-credit-card:before {
   content: "\e926";
-  color: #4f4f4f;
 }
 .uj-credit-card-alt:before {
   content: "\e927";
-  color: #4f4f4f;
 }
 .uj-crop:before {
   content: "\e928";
-  color: #4f4f4f;
 }
 .uj-dream:before {
   content: "\e929";
-  color: #4f4f4f;
 }
 .uj-dream-completed:before {
   content: "\e92a";
-  color: #4f4f4f;
 }
 .uj-edit:before {
   content: "\e92b";
-  color: #4f4f4f;
 }
 .uj-ellipsis-v:before {
   content: "\e979";
-  color: #4f4f4f;
 }
 .uj-envelope:before {
   content: "\e92c";
-  color: #4f4f4f;
 }
 .uj-envelope-alt:before {
   content: "\e92d";
-  color: #4f4f4f;
 }
 .uj-exclamation-circle:before {
   content: "\e97a";
-  color: #4f4f4f;
 }
 .uj-external-link:before {
   content: "\e980";
-  color: #4f4f4f;
 }
 .uj-eye:before {
   content: "\e92e";
-  color: #4f4f4f;
 }
 .uj-eye-slash:before {
   content: "\e92f";
-  color: #4f4f4f;
 }
 .uj-file:before {
   content: "\e930";
-  color: #4f4f4f;
 }
 .uj-film:before {
   content: "\e931";
-  color: #4f4f4f;
 }
 .uj-forward:before {
   content: "\e932";
-  color: #4f4f4f;
 }
 .uj-gift:before {
   content: "\e933";
-  color: #4f4f4f;
 }
 .uj-globe:before {
   content: "\e934";
-  color: #4f4f4f;
 }
 .uj-heart:before {
   content: "\e935";
-  color: #4f4f4f;
 }
 .uj-heart-o:before {
   content: "\e936";
-  color: #4f4f4f;
 }
 .uj-image:before {
   content: "\e937";
-  color: #4f4f4f;
 }
 .uj-key:before {
   content: "\e938";
-  color: #4f4f4f;
 }
 .uj-language:before {
   content: "\e939";
-  color: #4f4f4f;
 }
 .uj-lock:before {
   content: "\e93a";
-  color: #4f4f4f;
 }
 .uj-lock-open:before {
   content: "\e93b";
-  color: #4f4f4f;
 }
 .uj-login:before {
   content: "\e93c";
-  color: #4f4f4f;
 }
 .uj-login-alt:before {
   content: "\e93d";
-  color: #4f4f4f;
 }
 .uj-logout:before {
   content: "\e93e";
-  color: #4f4f4f;
 }
 .uj-logout-alt:before {
   content: "\e93f";
-  color: #4f4f4f;
 }
 .uj-music-square:before {
   content: "\e940";
-  color: #4f4f4f;
 }
 .uj-paper-plane:before {
   content: "\e97b";
-  color: #4f4f4f;
 }
 .uj-pencil:before {
   content: "\e941";
-  color: #4f4f4f;
 }
 .uj-people:before {
   content: "\e942";
-  color: #4f4f4f;
 }
 .uj-play:before {
   content: "\e943";
-  color: #4f4f4f;
 }
 .uj-plus:before {
   content: "\e97c";
-  color: #4f4f4f;
 }
 .uj-plus-circle:before {
   content: "\e944";
-  color: #4f4f4f;
 }
 .uj-question-circle:before {
   content: "\e97d";
-  color: #4f4f4f;
 }
 .uj-redo:before {
   content: "\e945";
-  color: #4f4f4f;
 }
 .uj-rewind:before {
   content: "\e946";
-  color: #4f4f4f;
 }
 .uj-rocket:before {
   content: "\e947";
-  color: #4f4f4f;
 }
 .uj-sand-clock:before {
   content: "\e948";
-  color: #4f4f4f;
 }
 .uj-search:before {
   content: "\e949";
-  color: #4f4f4f;
 }
 .uj-shopping-cart:before {
   content: "\e94a";
-  color: #4f4f4f;
 }
 .uj-sliders:before {
   content: "\e94b";
-  color: #4f4f4f;
 }
 .uj-star:before {
   content: "\e94c";
-  color: #4f4f4f;
 }
 .uj-star-o:before {
   content: "\e94d";
-  color: #4f4f4f;
 }
 .uj-story:before {
   content: "\e94e";
-  color: #4f4f4f;
 }
 .uj-table-tennis:before {
   content: "\e97e";
-  color: #4f4f4f;
 }
 .uj-terms:before {
   content: "\e94f";
-  color: #4f4f4f;
 }
 .uj-times:before {
   content: "\e950";
-  color: #4f4f4f;
 }
 .uj-times-circle:before {
   content: "\e951";
-  color: #4f4f4f;
 }
 .uj-trash:before {
   content: "\e952";
-  color: #4f4f4f;
 }
 .uj-trophy:before {
   content: "\e953";
-  color: #4f4f4f;
 }
 .uj-user:before {
   content: "\e954";
-  color: #4f4f4f;
 }
 .uj-user-check:before {
   content: "\e97f";
-  color: #4f4f4f;
 }
 .uj-user-plus:before {
   content: "\e955";
-  color: #4f4f4f;
 }
 .uj-youtube-video:before {
   content: "\e956";
-  color: #4f4f4f;
 }
 .uj-bell-color .path1:before {
   content: "\e96f";
