--- a/app/assets/stylesheets/uriji-icons.css.erb
+++ b/app/assets/stylesheets/uriji-icons.css.erb
@@ -6,479 +6,569 @@
 //= depend_on_asset "uriji-icons.svg"
 @font-face {
   font-family: 'UrijiIcons';
-  src:  url('<%= font_path("uriji-icons.eot") %>?9z8zd1');
-  src:  url('<%= font_path("uriji-icons.eot") %>?9z8zd1#iefix') format('embedded-opentype'),
-    url('<%= font_path("uriji-icons.ttf") %>?9z8zd1') format('truetype'),
-    url('<%= font_path("uriji-icons.woff") %>?9z8zd1') format('woff'),
-    url('<%= font_path("uriji-icons.svg") %>?9z8zd1#uriji-icons') format('svg');
   font-weight: normal;
   font-style: normal;
+  src:  url('<%= font_path("uriji-icons.eot") %>?bi4hc7');
+  src:  url('<%= font_path("uriji-icons.eot") %>?bi4hc7#iefix') format('embedded-opentype'),
+    url('<%= font_path("uriji-icons.ttf") %>?bi4hc7') format('truetype'),
+    url('<%= font_path("uriji-icons.woff") %>?bi4hc7') format('woff'),
+    url('<%= font_path("uriji-icons.svg") %>?bi4hc7#uriji-icons') format('svg');
   font-display: block;
 }
 
 [class^="uj-"], [class*=" uj-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'UrijiIcons' !important;
-  speak: none;
-  font-style: normal;
   font-weight: normal;
+  font-style: normal;
   font-variant: normal;
-  text-transform: none;
   line-height: 1;
+  text-transform: none;
+  speak: none;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.uj-align-center:before {
+.uj-accessibility:before {
   content: "\e900";
 }
-.uj-align-left:before {
+.uj-align-center:before {
   content: "\e901";
 }
-.uj-align-right:before {
+.uj-align-left:before {
   content: "\e902";
 }
-.uj-angle-down:before {
+.uj-align-right:before {
   content: "\e903";
 }
-.uj-angle-left:before {
+.uj-analytics:before {
   content: "\e904";
 }
-.uj-angle-right:before {
+.uj-angle-down:before {
   content: "\e905";
 }
-.uj-angle-up:before {
+.uj-angle-left:before {
   content: "\e906";
 }
-.uj-arrow-down:before {
+.uj-angle-right:before {
   content: "\e907";
 }
-.uj-arrow-left:before {
+.uj-angle-up:before {
   content: "\e908";
 }
-.uj-arrow-right:before {
+.uj-arrow-down:before {
   content: "\e909";
 }
-.uj-arrow-up:before {
+.uj-arrow-left:before {
   content: "\e90a";
 }
-.uj-ban:before {
+.uj-arrow-right:before {
   content: "\e90b";
 }
-.uj-bell:before {
+.uj-arrow-up:before {
   content: "\e90c";
 }
-.uj-birthday-cake:before {
+.uj-atom:before {
   content: "\e90d";
 }
-.uj-bookmark:before {
+.uj-ban:before {
   content: "\e90e";
 }
-.uj-bookmark-o:before {
+.uj-basketball-ball:before {
   content: "\e90f";
 }
-.uj-broom:before {
+.uj-bell:before {
   content: "\e910";
 }
-.uj-bug:before {
-  content: "\e911";
-}
-.uj-camera:before {
-  content: "\e912";
-}
-.uj-caret-down:before {
-  content: "\e913";
-}
-.uj-caret-left:before {
-  content: "\e914";
-}
-.uj-caret-right:before {
-  content: "\e915";
-}
-.uj-caret-up:before {
-  content: "\e916";
-}
-.uj-chart:before {
-  content: "\e917";
-}
-.uj-check:before {
-  content: "\e918";
-}
-.uj-chevron-circle-down:before {
-  content: "\e919";
-}
-.uj-chevron-circle-left:before {
-  content: "\e91a";
-}
-.uj-chevron-circle-right:before {
-  content: "\e91b";
-}
-.uj-chevron-circle-up:before {
-  content: "\e91c";
-}
-.uj-chevron-down:before {
-  content: "\e91d";
-}
-.uj-chevron-left:before {
-  content: "\e91e";
-}
-.uj-chevron-right:before {
-  content: "\e91f";
-}
-.uj-chevron-up:before {
-  content: "\e920";
-}
-.uj-cog:before {
-  content: "\e921";
-}
-.uj-coin-head:before {
-  content: "\e922";
-}
-.uj-coin-tail:before {
-  content: "\e923";
-}
-.uj-comments-dots:before {
-  content: "\e924";
-}
-.uj-copy:before {
-  content: "\e925";
-}
-.uj-credit-card:before {
-  content: "\e926";
-}
-.uj-credit-card-alt:before {
-  content: "\e927";
-}
-.uj-crop:before {
-  content: "\e928";
-}
-.uj-dream:before {
-  content: "\e929";
-}
-.uj-dream-completed:before {
-  content: "\e92a";
-}
-.uj-edit:before {
-  content: "\e92b";
-}
-.uj-ellipsis-v:before {
-  content: "\e979";
-}
-.uj-envelope:before {
-  content: "\e92c";
-}
-.uj-envelope-alt:before {
-  content: "\e92d";
-}
-.uj-exclamation-circle:before {
-  content: "\e97a";
-}
-.uj-external-link:before {
-  content: "\e980";
-}
-.uj-eye:before {
-  content: "\e92e";
-}
-.uj-eye-slash:before {
-  content: "\e92f";
-}
-.uj-file:before {
-  content: "\e930";
-}
-.uj-film:before {
-  content: "\e931";
-}
-.uj-forward:before {
-  content: "\e932";
-}
-.uj-gift:before {
-  content: "\e933";
-}
-.uj-globe:before {
-  content: "\e934";
-}
-.uj-heart:before {
-  content: "\e935";
-}
-.uj-heart-o:before {
-  content: "\e936";
-}
-.uj-image:before {
-  content: "\e937";
-}
-.uj-key:before {
-  content: "\e938";
-}
-.uj-language:before {
-  content: "\e939";
-}
-.uj-lock:before {
-  content: "\e93a";
-}
-.uj-lock-open:before {
-  content: "\e93b";
-}
-.uj-login:before {
-  content: "\e93c";
-}
-.uj-login-alt:before {
-  content: "\e93d";
-}
-.uj-logout:before {
-  content: "\e93e";
-}
-.uj-logout-alt:before {
-  content: "\e93f";
-}
-.uj-music-square:before {
-  content: "\e940";
-}
-.uj-paper-plane:before {
-  content: "\e97b";
-}
-.uj-pencil:before {
-  content: "\e941";
-}
-.uj-people:before {
-  content: "\e942";
-}
-.uj-play:before {
-  content: "\e943";
-}
-.uj-plus:before {
-  content: "\e97c";
-}
-.uj-plus-circle:before {
-  content: "\e944";
-}
-.uj-question-circle:before {
-  content: "\e97d";
-}
-.uj-redo:before {
-  content: "\e945";
-}
-.uj-rewind:before {
-  content: "\e946";
-}
-.uj-rocket:before {
-  content: "\e947";
-}
-.uj-sand-clock:before {
-  content: "\e948";
-}
-.uj-search:before {
-  content: "\e949";
-}
-.uj-shopping-cart:before {
-  content: "\e94a";
-}
-.uj-sliders:before {
-  content: "\e94b";
-}
-.uj-star:before {
-  content: "\e94c";
-}
-.uj-star-o:before {
-  content: "\e94d";
-}
-.uj-story:before {
-  content: "\e94e";
-}
-.uj-table-tennis:before {
-  content: "\e97e";
-}
-.uj-terms:before {
-  content: "\e94f";
-}
-.uj-times:before {
-  content: "\e950";
-}
-.uj-times-circle:before {
-  content: "\e951";
-}
-.uj-trash:before {
-  content: "\e952";
-}
-.uj-trophy:before {
-  content: "\e953";
-}
-.uj-user:before {
-  content: "\e954";
-}
-.uj-user-check:before {
-  content: "\e97f";
-}
-.uj-user-plus:before {
-  content: "\e955";
-}
-.uj-youtube-video:before {
-  content: "\e956";
-}
 .uj-bell-color .path1:before {
-  content: "\e96f";
+  content: "\e911";
   color: rgb(242, 201, 76);
 }
 .uj-bell-color .path2:before {
-  content: "\e970";
   margin-left: -1em;
+  content: "\e912";
   color: rgb(242, 201, 76);
 }
 .uj-bell-color .path3:before {
-  content: "\e971";
   margin-left: -1em;
+  content: "\e913";
   color: rgb(242, 201, 76);
 }
 .uj-bell-color .path4:before {
-  content: "\e972";
   margin-left: -1em;
+  content: "\e914";
   color: rgb(242, 201, 76);
 }
 .uj-bell-color .path5:before {
-  content: "\e973";
   margin-left: -1em;
+  content: "\e915";
   color: rgb(79, 79, 79);
 }
 .uj-bell-color .path6:before {
-  content: "\e974";
   margin-left: -1em;
+  content: "\e916";
   color: rgb(79, 79, 79);
 }
 .uj-bell-color .path7:before {
-  content: "\e975";
   margin-left: -1em;
+  content: "\e917";
   color: rgb(255, 253, 248);
 }
 .uj-bell-color .path8:before {
-  content: "\e976";
   margin-left: -1em;
+  content: "\e918";
   color: rgb(175, 145, 62);
 }
 .uj-bell-color .path9:before {
-  content: "\e977";
   margin-left: -1em;
+  content: "\e919";
   color: rgb(175, 145, 62);
 }
 .uj-bell-color .path10:before {
-  content: "\e978";
   margin-left: -1em;
+  content: "\e91a";
   color: rgb(255, 253, 248);
 }
+.uj-birthday-cake:before {
+  content: "\e91b";
+}
+.uj-bookmark:before {
+  content: "\e91c";
+}
+.uj-bookmark-o:before {
+  content: "\e91d";
+}
+.uj-broom:before {
+  content: "\e91e";
+}
+.uj-bug:before {
+  content: "\e91f";
+}
+.uj-camera:before {
+  content: "\e920";
+}
+.uj-caret-down:before {
+  content: "\e921";
+}
+.uj-caret-left:before {
+  content: "\e922";
+}
+.uj-caret-right:before {
+  content: "\e923";
+}
+.uj-caret-up:before {
+  content: "\e924";
+}
+.uj-chart:before {
+  content: "\e925";
+}
+.uj-check:before {
+  content: "\e926";
+}
+.uj-chevron-circle-down:before {
+  content: "\e927";
+}
+.uj-chevron-circle-left:before {
+  content: "\e928";
+}
+.uj-chevron-circle-right:before {
+  content: "\e929";
+}
+.uj-chevron-circle-up:before {
+  content: "\e92a";
+}
+.uj-chevron-down:before {
+  content: "\e92b";
+}
+.uj-chevron-left:before {
+  content: "\e92c";
+}
+.uj-chevron-right:before {
+  content: "\e92d";
+}
+.uj-chevron-up:before {
+  content: "\e92e";
+}
+.uj-circuit-board:before {
+  content: "\e92f";
+}
+.uj-cog:before {
+  content: "\e930";
+}
+.uj-coins-head:before {
+  content: "\e931";
+}
+.uj-coins-tail:before {
+  content: "\e932";
+}
+.uj-coin-tail:before {
+  content: "\e933";
+}
+.uj-comments-dots:before {
+  content: "\e934";
+}
 .uj-comments-dots-color .path1:before {
-  content: "\e961";
+  content: "\e935";
   color: rgb(233, 252, 255);
 }
 .uj-comments-dots-color .path2:before {
-  content: "\e962";
   margin-left: -1em;
+  content: "\e936";
   color: rgb(79, 79, 79);
 }
 .uj-comments-dots-color .path3:before {
-  content: "\e963";
   margin-left: -1em;
+  content: "\e937";
   color: rgb(79, 79, 79);
 }
 .uj-comments-dots-color .path4:before {
-  content: "\e964";
   margin-left: -1em;
+  content: "\e938";
   color: rgb(79, 79, 79);
 }
 .uj-comments-dots-color .path5:before {
-  content: "\e965";
   margin-left: -1em;
+  content: "\e939";
   color: rgb(8, 146, 205);
 }
 .uj-comments-dots-color .path6:before {
-  content: "\e966";
   margin-left: -1em;
+  content: "\e93a";
   color: rgb(255, 255, 255);
 }
 .uj-comments-dots-color .path7:before {
-  content: "\e967";
   margin-left: -1em;
+  content: "\e93b";
   color: rgb(255, 255, 255);
 }
 .uj-comments-dots-color .path8:before {
-  content: "\e968";
   margin-left: -1em;
+  content: "\e93c";
   color: rgb(255, 255, 255);
 }
+.uj-copy:before {
+  content: "\e93d";
+}
+.uj-credit-card:before {
+  content: "\e93e";
+}
+.uj-credit-card-alt:before {
+  content: "\e93f";
+}
 .uj-credit-card-color .path1:before {
-  content: "\e969";
+  content: "\e940";
   color: rgb(242, 201, 76);
 }
 .uj-credit-card-color .path2:before {
-  content: "\e96a";
-  margin-left: -1.3916015625em;
+  margin-left: -1em;
+  content: "\e941";
   color: rgb(175, 145, 62);
 }
 .uj-credit-card-color .path3:before {
-  content: "\e96b";
-  margin-left: -1.3916015625em;
+  margin-left: -1em;
+  content: "\e942";
   color: rgb(175, 145, 62);
 }
 .uj-credit-card-color .path4:before {
-  content: "\e96c";
-  margin-left: -1.3916015625em;
+  margin-left: -1em;
+  content: "\e943";
   color: rgb(244, 244, 244);
 }
 .uj-credit-card-color .path5:before {
-  content: "\e96d";
-  margin-left: -1.3916015625em;
+  margin-left: -1em;
+  content: "\e944";
   color: rgb(244, 244, 244);
 }
 .uj-credit-card-color .path6:before {
-  content: "\e96e";
-  margin-left: -1.3916015625em;
+  margin-left: -1em;
+  content: "\e945";
   color: rgb(79, 79, 79);
 }
-.uj-rocket-color .path1:before {
+.uj-crop:before {
+  content: "\e946";
+}
+.uj-dollar-sign:before {
+  content: "\e947";
+}
+.uj-dream:before {
+  content: "\e948";
+}
+.uj-dream-completed:before {
+  content: "\e949";
+}
+.uj-edit:before {
+  content: "\e94a";
+}
+.uj-ellipsis-v:before {
+  content: "\e94b";
+}
+.uj-envelope:before {
+  content: "\e94c";
+}
+.uj-envelope-alt:before {
+  content: "\e94d";
+}
+.uj-exclamation-circle:before {
+  content: "\e94e";
+}
+.uj-external-link:before {
+  content: "\e94f";
+}
+.uj-eye:before {
+  content: "\e950";
+}
+.uj-eye-slash:before {
+  content: "\e951";
+}
+.uj-file:before {
+  content: "\e952";
+}
+.uj-film:before {
+  content: "\e953";
+}
+.uj-forward:before {
+  content: "\e954";
+}
+.uj-galea:before {
+  content: "\e955";
+}
+.uj-gamepad:before {
+  content: "\e956";
+}
+.uj-gift:before {
   content: "\e957";
+}
+.uj-globe:before {
+  content: "\e958";
+}
+.uj-graduation-cap:before {
+  content: "\e959";
+}
+.uj-hand-heart:before {
+  content: "\e95a";
+}
+.uj-hands-hope:before {
+  content: "\e95b";
+}
+.uj-health:before {
+  content: "\e95c";
+}
+.uj-heart:before {
+  content: "\e95d";
+}
+.uj-heart-o:before {
+  content: "\e95e";
+}
+.uj-heel:before {
+  content: "\e95f";
+}
+.uj-image:before {
+  content: "\e960";
+}
+.uj-key:before {
+  content: "\e961";
+}
+.uj-language:before {
+  content: "\e962";
+}
+.uj-lock:before {
+  content: "\e963";
+}
+.uj-lock-open:before {
+  content: "\e964";
+}
+.uj-login:before {
+  content: "\e965";
+}
+.uj-login-alt:before {
+  content: "\e966";
+}
+.uj-logout:before {
+  content: "\e967";
+}
+.uj-logout-alt:before {
+  content: "\e968";
+}
+.uj-microphone:before {
+  content: "\e969";
+}
+.uj-music-square:before {
+  content: "\e96a";
+}
+.uj-newspaper:before {
+  content: "\e96b";
+}
+.uj-paperclip:before {
+  content: "\e96c";
+}
+.uj-paper-plane:before {
+  content: "\e96d";
+}
+.uj-pause:before {
+  content: "\e96e";
+}
+.uj-paw:before {
+  content: "\e96f";
+}
+.uj-pencil:before {
+  content: "\e970";
+}
+.uj-people:before {
+  content: "\e971";
+}
+.uj-plane:before {
+  content: "\e972";
+}
+.uj-play:before {
+  content: "\e973";
+}
+.uj-plus:before {
+  content: "\e974";
+}
+.uj-plus-circle:before {
+  content: "\e975";
+}
+.uj-question-circle:before {
+  content: "\e976";
+}
+.uj-redo:before {
+  content: "\e977";
+}
+.uj-relationship:before {
+  content: "\e978";
+}
+.uj-resend:before {
+  content: "\e979";
+}
+.uj-rewind:before {
+  content: "\e97a";
+}
+.uj-rocket:before {
+  content: "\e97b";
+}
+.uj-rocket-color .path1:before {
+  content: "\e97c";
   color: rgb(151, 151, 151);
 }
 .uj-rocket-color .path2:before {
-  content: "\e958";
   margin-left: -1em;
+  content: "\e97d";
   color: rgb(79, 79, 79);
 }
 .uj-rocket-color .path3:before {
-  content: "\e959";
   margin-left: -1em;
+  content: "\e97e";
   color: rgb(79, 79, 79);
 }
 .uj-rocket-color .path4:before {
-  content: "\e95a";
   margin-left: -1em;
+  content: "\e97f";
   color: rgb(79, 79, 79);
 }
 .uj-rocket-color .path5:before {
-  content: "\e95b";
   margin-left: -1em;
+  content: "\e980";
   color: rgb(79, 79, 79);
 }
 .uj-rocket-color .path6:before {
-  content: "\e95c";
   margin-left: -1em;
+  content: "\e981";
   color: rgb(79, 79, 79);
 }
 .uj-rocket-color .path7:before {
-  content: "\e95d";
   margin-left: -1em;
+  content: "\e982";
   color: rgb(79, 79, 79);
 }
 .uj-rocket-color .path8:before {
-  content: "\e95e";
   margin-left: -1em;
+  content: "\e983";
   color: rgb(247, 246, 245);
 }
 .uj-rocket-color .path9:before {
-  content: "\e95f";
   margin-left: -1em;
+  content: "\e984";
   color: rgb(10, 146, 205);
 }
 .uj-rocket-color .path10:before {
-  content: "\e960";
   margin-left: -1em;
+  content: "\e985";
   color: rgb(79, 79, 79);
+}
+.uj-sand-clock:before {
+  content: "\e986";
+}
+.uj-scroll:before {
+  content: "\e987";
+}
+.uj-search:before {
+  content: "\e988";
+}
+.uj-share:before {
+  content: "\e989";
+}
+.uj-shopping-cart:before {
+  content: "\e98a";
+}
+.uj-sliders:before {
+  content: "\e98b";
+}
+.uj-speech:before {
+  content: "\e98c";
+}
+.uj-star:before {
+  content: "\e98d";
+}
+.uj-star-o:before {
+  content: "\e98e";
+}
+.uj-story:before {
+  content: "\e98f";
+}
+.uj-table-tennis:before {
+  content: "\e990";
+}
+.uj-terms:before {
+  content: "\e991";
+}
+.uj-theater-masks:before {
+  content: "\e992";
+}
+.uj-times:before {
+  content: "\e993";
+}
+.uj-times-circle:before {
+  content: "\e994";
+}
+.uj-trash:before {
+  content: "\e995";
+}
+.uj-trophy:before {
+  content: "\e996";
+}
+.uj-user:before {
+  content: "\e997";
+}
+.uj-user-check:before {
+  content: "\e998";
+}
+.uj-user-lock:before {
+  content: "\e999";
+}
+.uj-user-plus:before {
+  content: "\e99a";
+}
+.uj-users:before {
+  content: "\e99b";
+}
+.uj-utensils:before {
+  content: "\e99c";
+}
+.uj-video:before {
+  content: "\e99d";
+}
+.uj-youtube-video:before {
+  content: "\e99e";
 }
